test/fail/type-error-imports.mo
import _ "empty-module";
import {} "empty-module";

/*
import () = "empty-module";
import 3 = "empty-module";
import "boo" = "empty-module";
*/
import (_, _) = "empty-module";


import "depri" = "unit-module";
//import () = "unit-module";
